SERVER-127320 Fix timeseries $geoWithin bucket filter producing empty bounding box from floating-point round-trip. (#54184)

GitOrigin-RevId: c9c8a76eeabaef5da5c4b8f873afb33f7471d4cc